--- a/i_talks.html
+++ b/i_talks.html
@@ -109,7 +109,7 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, Dec
 </p>
 
 <p>
-  Computer Science Graduate Seminar, KAUST, November 1, 2021 (invited)
+  <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">Computer Science Graduate Seminar</a>, KAUST, November 1, 2021 (invited)
 </p>
 
 <p>
