--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
 
 
 
+          <h3>October 25, 2021</h3>
+          <h1>Talk at KInIT</h1>
+          <br>
+
+          Today at 15:30 I am giving a research talk  at the <a href="https://kinit.sk">Kempelen Institute of Intelligent Technologies (KInIT)</a>, Slovakia.
+           <br>
+
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
           <h3>October 22, 2021</h3>
           <h1>Talk at "Matfyz"</h1>
           <br>
