--- a/i_talks.html
+++ b/i_talks.html
@@ -96,6 +96,14 @@ NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
 Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, December 2021 (plenary)
 </p>
 
+
+
+
+<p>
+</a href="https://www.kaust.edu.sa/en">KAUST</a>-<a href="http://ai.ruc.edu.cn/english/index.htm">GSAI</a> Joint Workshop on Advances in AI, virtual, November 25, 2021 (invited)
+</p>
+
+
 <p>
 <a href="https://www.cs.ut.ee/en/industry-collaboration/data-science-seminars">Data Science Seminar</a>, University of Tartu, Estonia, November 18, 2021 (invited)
 </p>
@@ -112,22 +120,24 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, Dec
   <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">Computer Science Graduate Seminar</a>, KAUST, November 1, 2021 (invited)
 </p>
 
-<p>
-  Research Seminar, <a href="https://kinit.sk">Kempelen Institute for Intelligent Technologies</a>, Slovakia, October 25, 2021
-</p>
+
 
 <p>
   <a href="https://meetings2.informs.org/wordpress/anaheim2021/">INFORMS Annual Meeting</a>, Anaheim, California, October 24-27, 2021
-</p>
-
-<p>
-  <a href="https://fmph.uniba.sk/detail-novinky/back_to_page/fakulta-matematiky-fyziky-a-informatiky-uk/article/seminar-zo-strojoveho-ucenia-peter-richtarik-22102021/">Machine Learning Research Seminar</a>, Faculty of Mathematics, Physics and Informatics, Comenius University, Slovakia, October 22, 2021
 </p>
 
 
 
 
 <h1>2021 Talks</h1>
+
+<p>
+[184]  Research Seminar, <a href="https://kinit.sk">Kempelen Institute for Intelligent Technologies</a>, Slovakia, October 25, 2021
+</p>
+
+<p>
+[183]  <a href="https://fmph.uniba.sk/detail-novinky/back_to_page/fakulta-matematiky-fyziky-a-informatiky-uk/article/seminar-zo-strojoveho-ucenia-peter-richtarik-22102021/">Machine Learning Research Seminar</a>, Faculty of Mathematics, Physics and Informatics, Comenius University, Slovakia, October 22, 2021
+</p>
 
 <p>
 [182] <a href="https://sites.google.com/view/one-world-seminar-series-flow/archive/2021#h.m3gei59g1ubv">Federated Learning One World Seminar</a>, virtual, July 28, 2021
