KAUST seminar talk

--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
 
 
 
+
+          <h3>November 1, 2021</h3>
+          <h1>Talk at KInIT</h1>
+          <br>
+
+          Today I am giving <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">a talk in the CS Graduate Seminar at KAUST.</a>
+           <br>
+
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
           <h3>October 25, 2021</h3>
           <h1>Talk at KInIT</h1>
           <br>
