--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,11 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [176] Xun Qian, Rustem Islamov, Mher Safaryan and Peter Richtárik<br>
+          <b>Basis matters: better communication-efficient second order methods for federated learning</b><br>
+          [<a href="https://arxiv.org/abs/2111.01847">arXiv</a>] [code: BL1, BL2, BL3] <br>
+          <br>
+          
           [175] Aleksandr Beznosikov, Peter Richtárik, Michael Diskin, Max Ryabinin and Alexander Gasnikov<br>
           <b>Distributed methods with compressed communication for solving variational inequalities, with theoretical guarantees</b><br>
           [<a href="https://arxiv.org/abs/2110.03313">arXiv</a>] [code: MASHA1, MASHA2] <br>
