--- a/index.html
+++ b/index.html
@@ -46,8 +46,34 @@
 
 
 
+
+          <h3>November 2, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2111.01847">"Basis Matters: Better Communication-Efficient Second Order Methods for Federated Learning"</a> -
+          joint work with
+          <a href="https://qianxunk.github.io">Xun Qian</a>,
+          <a href="https://rustem-islamov.github.io">Rustem Islamov</a> and
+          <a href="https://mher-safaryan.github.io">Mher Safaryan.</a>
+          <br>
+          <br>
+          Abstract: <i>
+          Recent advances in distributed optimization have shown that Newton-type methods with proper communication compression mechanisms can guarantee fast local rates and low communication cost compared to first order methods. We discover that the communication cost of these methods can be further reduced, sometimes dramatically so, with a surprisingly simple trick: {\em Basis Learn (BL)}. The idea is to transform the usual representation of the local Hessians via a change of basis in the space of matrices and apply compression tools to the new representation. To demonstrate the potential of using custom bases, we design a new Newton-type method (BL1), which reduces communication cost via both {\em BL} technique and bidirectional compression mechanism. Furthermore, we present two alternative extensions (BL2 and BL3) to partial participation to accommodate federated learning applications. We prove local linear and superlinear rates independent of the condition number. Finally, we support our claims with numerical experiments by comparing several first and second~order~methods.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
           <h3>November 1, 2021</h3>
-          <h1>Talk at KInIT</h1>
+          <h1>Talk at the CS Graduate Seminar at KAUST</h1>
           <br>
 
           Today I am giving <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">a talk in the CS Graduate Seminar at KAUST.</a>
