--- a/i_team.html
+++ b/i_team.html
@@ -59,11 +59,12 @@
 
           <h2>Postdocs </h2>
           <ul>
+            <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (10/2021-present)</li>
             <li><a href="https://k3nfalt.github.io">Alexander Tyurin</a> (7/2021-present)</li>
             <li><a href="https://fhanzely.github.io">Filip Hanzely</a> (8/2020-11/2020)</li>
             <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)</li>
             <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-9/2020)</li>
-            <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-present)</li>
+            <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-10/2021)</li>
             <li><a href="https://qianxunk.github.io">Xun Qian</a> (11/2018-present)</li>
             <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (1/2018-1/2019)<br></li>
             <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a> (5/2017-5/2019</span>)</li>
@@ -78,7 +79,7 @@
             <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (1/2020-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
             <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a>  (1/2019-present)</li>
-            <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-present)</li>
+            <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-10/2021)</li>
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-7/2020) <br>
               thesis: <a href="https://arxiv.org/abs/2008.11824">Optimization for Supervised Machine Learning: Randomized Algorithms for Data and Parameters</a> <br>
               current position: Research Assistant Professor, TTIC, Chicago, USA
@@ -102,8 +103,8 @@
 
           <h2> Research Interns</h2>
           <ul>
-            <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> (Warwick), 7/2021-4/2022 </li>
-            <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 7/2021-9/2021 </li>
+            <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> (Warwick), 7/2021-10/2021 </li>
+            <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 7/2021-present </li>
             <li> <a href="https://scholar.google.com/citations?hl=en&user=H9GqvAYAAAAJ&view_op=list_works&sortby=pubdate">Bokun Wang</a> (University of California, Davis), 5/2020-8/2021</li>
             <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Technical University Munich), 3/2021-present </li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 3/2021-8/2021</li>
