--- a/i_talks.html
+++ b/i_talks.html
@@ -108,28 +108,23 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, Dec
 <a href="https://www.cs.ut.ee/en/industry-collaboration/data-science-seminars">Data Science Seminar</a>, University of Tartu, Estonia, November 18, 2021 (invited)
 </p>
 
-<p>
-  SMAP Colloquium, University of Portsmouth, November 10, 2021 (invited)
-</p>
-
-<p>
-  Google Federated Learning and Analytics Workshop, November 8-10, 2021 (invited)
-</p>
-
-<p>
-  <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">Computer Science Graduate Seminar</a>, KAUST, November 1, 2021 (invited)
-</p>
-
-
-
-<p>
-  <a href="https://meetings2.informs.org/wordpress/anaheim2021/">INFORMS Annual Meeting</a>, Anaheim, California, October 24-27, 2021
-</p>
 
 
 
 
 <h1>2021 Talks</h1>
+
+<p>
+[187] SMAP Colloquium, University of Portsmouth, November 10, 2021 (invited)
+</p>
+
+<p>
+[186] Google Federated Learning and Analytics Workshop, November 8-10, 2021 (invited)
+</p>
+
+<p>
+[185] <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">Computer Science Graduate Seminar</a>, KAUST, November 1, 2021 (invited)
+</p>
 
 <p>
 [184]  Research Seminar, <a href="https://kinit.sk">Kempelen Institute for Intelligent Technologies</a>, Slovakia, October 25, 2021
