--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 
 
 
+                    <h3>November 10, 2021</h3>
+                    <h1>Talk at the SMAP Colloquium at the University of Portsmouth, United Kingdom</h1>
+                    <br>
+
+                    Today I gave a 1hr research talk on the EF21 method at the SMAP Colloquium, University of Portsmouth, UK.
+                     <br>
+
+
+                    <br>
+                    <br>
+                    <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+                    <br>
+                    <br>
+
+
+
 
           <h3>November 2, 2021</h3>
           <h1>New Paper</h1>
