--- a/i_join.html
+++ b/i_join.html
@@ -79,8 +79,8 @@
 
           <li> eligible regions/countries: Europe (this includes Turkey and Russia), North America (USA &amp; Canada), Australasia (Australia &amp; NZ), Latin America, South Korea, Japan, Singapore. </li>
 
-        <li> I have 4 VSRP projects open: i) <a href="https://vsrp.kaust.edu.sa/Pages/Gradient%20compression%20for%20distributed%20training%20of%20machine%20learning%20models.aspx">Gradient compression for distributed training of machine learning models</a>, ii) <a href="https://vsrp.kaust.edu.sa/Pages/Towards%20a%20Principled%20Understanding%20of%20Deep%20Learning.aspx">Towards a principled understanding of deep learning</a>, iii) <a
-            href="https://vsrp.kaust.edu.sa/Pages/Federated%20Learning.aspx">Federated learning</a>, iv) <a href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20Optimization.aspx">Topics in machine learning and optimization</a> </li>
+        <li> I have 4 VSRP projects open: i) <a href="https://vsrp.kaust.edu.sa/internship/projects/detail-project/gradient-compression-for-distributed-training-of-machine-learning-models">Gradient compression for distributed training of machine learning models</a>, ii) <a href="https://vsrp.kaust.edu.sa/internship/projects/detail-project/towards-a-principled-understanding-of-deep-learning">Towards a principled understanding of deep learning</a>, iii) <a
+            href="https://vsrp.kaust.edu.sa/internship/projects/detail-project/federated-learning">Federated learning</a>, iv) <a href="https://vsrp.kaust.edu.sa/internship/projects/detail-project/topics-in-machine-learning-and-optimization">Topics in machine learning and optimization</a> </li>
 
         </ul>
 
