--- a/i_team.html
+++ b/i_team.html
@@ -65,7 +65,7 @@
             <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)</li>
             <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-9/2020)</li>
             <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-10/2021)</li>
-            <li><a href="https://qianxunk.github.io">Xun Qian</a> (11/2018-present)</li>
+            <li><a href="https://qianxunk.github.io">Xun Qian</a> (11/2018-11/2021)</li>
             <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (1/2018-1/2019)<br></li>
             <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a> (5/2017-5/2019</span>)</li>
           </ul>
@@ -103,6 +103,7 @@
 
           <h2> Research Interns</h2>
           <ul>
+            <li><a href="https://scholar.google.com/citations?user=BFCHfngAAAAJ&hl=en">Navish Kumar</a> (IIT Kharagpur), 11/2021-5/2022 </li>
             <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> (Warwick), 7/2021-10/2021 </li>
             <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 7/2021-present </li>
             <li> <a href="https://scholar.google.com/citations?hl=en&user=H9GqvAYAAAAJ&view_op=list_works&sortby=pubdate">Bokun Wang</a> (University of California, Davis), 5/2020-8/2021</li>
