--- a/index.html
+++ b/index.html
@@ -45,6 +45,33 @@
 
 
 
+          <h3>November 17, 2021</h3>
+          <h1>Samuel, Dmitry and Grigory won the 2021 CEMSE Research Excellence Award!</h1>
+          <br>
+
+          Today I am very proud and happy! Three of my students won the CEMSE Research Excellence Award at KAUST: <a href="https://samuelhorvath.github.io">Samuel Horváth</a> (Statistics PhD student),
+          <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> (Computer Science PhD student) and
+          <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (Applied Math and Computing Sciences MS student). The Statistics award is also known as the "Al-Kindi Research Excellence Award".
+           <br>
+           <br>
+
+           The award comes with a 1,000 USD cash prize for each. Congratulations to all of you, well deserved!
+           <br>
+
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
+
+
+
+
 
                     <h3>November 10, 2021</h3>
                     <h1>Talk at the SMAP Colloquium at the University of Portsmouth, United Kingdom</h1>
