--- a/i_papers.html
+++ b/i_papers.html
@@ -56,7 +56,7 @@
           <b>Basis matters: better communication-efficient second order methods for federated learning</b><br>
           [<a href="https://arxiv.org/abs/2111.01847">arXiv</a>] [code: BL1, BL2, BL3] <br>
           <br>
-          
+
           [175] Aleksandr Beznosikov, Peter Richtárik, Michael Diskin, Max Ryabinin and Alexander Gasnikov<br>
           <b>Distributed methods with compressed communication for solving variational inequalities, with theoretical guarantees</b><br>
           [<a href="https://arxiv.org/abs/2110.03313">arXiv</a>] [code: MASHA1, MASHA2] <br>
@@ -93,6 +93,7 @@
 
           [169] Zhize Li and Peter Richtárik<br>
           <b>CANITA: Faster rates for distributed convex optimization with communication compression</b><br>
+          Advances in Neural Information Processing Systems 34 (NeurIPS 2021) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2107.09461">arXiv</a>] [code: CANITA] <br>
           <br>
@@ -105,12 +106,14 @@
 
           [167] Peter Richtárik, Igor Sokolov and Ilyas Fatkhullin<br>
           <b>EF21: A new, simpler, theoretically better, and practically faster error feedback</b><br>
+          Advances in Neural Information Processing Systems 34 (NeurIPS 2021) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [<a href="talks/TALK-2021-EF21-FL-ICML21.pdf">slides</a>] [code: EF21, EF21+]<br>
           <br>
 
           [166] Dmitry Kovalev, Elnur Gasanov, Peter Richtárik and Alexander Gasnikov<br>
           <b>Lower bounds and optimal algorithms for smooth and strongly convex decentralized optimization over time-varying networks</b><br>
+          Advances in Neural Information Processing Systems 34 (NeurIPS 2021) <br>
           [<a href="https://arxiv.org/abs/2106.04469">arXiv</a>] [code: ADOM+]<br>
           <br>
 
@@ -181,6 +184,7 @@
 
           [154] Mher Safaryan, Filip Hanzely and Peter Richtárik<br>
           <b>Smoothness matrices beat smoothness constants: better communication compression techniques for distributed optimization</b><br>
+          Advances in Neural Information Processing Systems 34 (NeurIPS 2021) <br>
           <a href="https://dp-ml.github.io/2021-workshop-ICLR/">ICLR Workshop: Distributed and Private Machine Learning </a><br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
@@ -283,6 +287,7 @@
 
           [140] Xun Qian, Peter Richtárik, and Tong Zhang<br>
           <b>Error compensated distributed SGD can be accelerated</b><br>
+          Advances in Neural Information Processing Systems 34 (NeurIPS 2021) <br>
           <a href="https://opt-ml.org/papers/2020/paper_60.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2010.00091">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_60.pdf">poster</a>] [code: ECLK]  <br>
