--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
 
 
 
+<h3>November 24, 2021</h3>
+<h1>KAUST-GSAI Workshop</h1>
+<br>
+
+Today and tomorrow I am attending (and giving a talk at) the <a href="http://ai.ruc.edu.cn/english/gsainews/20211119100.html">KAUST-GSAI Joint Workshop on Advances in AI</a>.
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
           <h3>November 17, 2021</h3>
           <h1>Samuel, Dmitry and Grigory won the 2021 CEMSE Research Excellence Award!</h1>
           <br>
