--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,11 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [177] Elnur Gasanov, Ahmed Khaled, Samuel Horváth and Peter Richtárik<br>
+          <b>FLIX: A simple and communication-efficient alternative to local methods in federated learning</b><br>
+          [<a href="https://arxiv.org/abs/2111.11556">arXiv</a>] [code: FLIX] <br>
+          <br>
+
           [176] Xun Qian, Rustem Islamov, Mher Safaryan and Peter Richtárik<br>
           <b>Basis matters: better communication-efficient second order methods for federated learning</b><br>
           [<a href="https://arxiv.org/abs/2111.01847">arXiv</a>] [code: BL1, BL2, BL3] <br>
