--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 
 
 
+
+
+
 <h3>November 24, 2021</h3>
 <h1>KAUST-GSAI Workshop</h1>
 <br>
@@ -60,25 +63,51 @@ Today and tomorrow I am attending (and giving a talk at) the <a href="http://ai.
 <br>
 
 
-          <h3>November 17, 2021</h3>
-          <h1>Samuel, Dmitry and Grigory won the 2021 CEMSE Research Excellence Award!</h1>
-          <br>
 
-          Today I am very proud and happy! Three of my students won the CEMSE Research Excellence Award at KAUST: <a href="https://samuelhorvath.github.io">Samuel Horváth</a> (Statistics PhD student),
-          <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> (Computer Science PhD student) and
-          <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (Applied Math and Computing Sciences MS student). The Statistics award is also known as the "Al-Kindi Research Excellence Award".
-           <br>
-           <br>
+<h3>November 22, 2021</h3>
+<h1>New Paper</h1>
+<br>
 
-           The award comes with a 1,000 USD cash prize for each. Congratulations to all of you, well deserved!
-           <br>
+<span class="important">New paper out: </span>
+<a href="https://arxiv.org/abs/2111.11556">"FLIX: A Simple and Communication-Efficient Alternative to Local Methods in Federated Learning"</a> -
+joint work with
+<a href="http://elnurgasanov.com">Elnur Gasanov</a>,
+<a href="https://rka97.github.io">Ahmed Khaled</a> and
+<a href="https://samuelhorvath.github.io">Samuel Horváth.</a>
+<br>
+<br>
+Abstract: <i>
+Federated Learning (FL) is an increasingly popular machine learning paradigm in which multiple nodes try to collaboratively learn under privacy, communication and multiple heterogeneity constraints. A persistent problem in federated learning is that it is not clear what the optimization objective should be: the standard average risk minimization of supervised learning is inadequate in handling several major constraints specific to federated learning, such as communication adaptivity and personalization control. We identify several key desiderata in frameworks for federated learning and introduce a new framework, FLIX, that takes into account the unique challenges brought by federated learning. FLIX has a standard finite-sum form, which enables practitioners to tap into the immense wealth of existing (potentially non-local) methods for distributed optimization. Through a smart initialization that does not require any communication, FLIX does not require the use of local steps but is still provably capable of performing dissimilarity regularization on par with local methods. We give several algorithms for solving the FLIX formulation efficiently under communication constraints. Finally, we corroborate our theoretical results with extensive experimentation.
+</i>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
-          <br>
-          <br>
-          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
-          <br>
-          <br>
+
+<h3>November 17, 2021</h3>
+<h1>Samuel, Dmitry and Grigory won the 2021 CEMSE Research Excellence Award!</h1>
+<br>
+
+Today I am very proud and happy! Three of my students won the CEMSE Research Excellence Award at KAUST: <a href="https://samuelhorvath.github.io">Samuel Horváth</a> (Statistics PhD student),
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> (Computer Science PhD student) and
+<a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (Applied Math and Computing Sciences MS student). The Statistics award is also known as the "Al-Kindi Research Excellence Award".
+<br>
+<br>
+
+The award comes with a 1,000 USD cash prize for each. Congratulations to all of you, well deserved!
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 
