--- a/i_talks.html
+++ b/i_talks.html
@@ -92,27 +92,24 @@ PhD Course (18 hrs), Vienna Graduate School for Computational Optimization (VGSC
 </p>
 
 <p>
-NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
-Privacy, Fairness, Robustness, Personalization and Data Ownership", virtual, December 2021 (plenary)
+<a href="https://neurips2021workshopfl.github.io/NFFL-2021/">NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
+Privacy, Fairness, Robustness, Personalization and Data Ownership"</a>, virtual, December 13, 2021 (plenary)
 </p>
-
-
-
 
 <p>
-</a href="https://www.kaust.edu.sa/en">KAUST</a>-<a href="http://ai.ruc.edu.cn/english/index.htm">GSAI</a> Joint Workshop on Advances in AI, virtual, November 25, 2021 (invited)
+<a href="https://nips.cc/virtual/2021/calendar">NeurIPS 2021 Oral Talk</a> on the <a href="https://arxiv.org/abs/2106.05203">EF21 paper</a>, virtual, December 7, 2021 (oral talk; less than 1% acceptance rate)
 </p>
-
-
-<p>
-<a href="https://www.cs.ut.ee/en/industry-collaboration/data-science-seminars">Data Science Seminar</a>, University of Tartu, Estonia, November 18, 2021 (invited)
-</p>
-
-
-
 
 
 <h1>2021 Talks</h1>
+
+<p>
+[189] </a href="https://www.kaust.edu.sa/en">KAUST</a>-<a href="http://ai.ruc.edu.cn/english/index.htm">GSAI</a> Joint Workshop on Advances in AI, virtual, November 25, 2021 (invited)
+</p>
+
+<p>
+[188] <a href="https://www.cs.ut.ee/en/industry-collaboration/data-science-seminars">Data Science Seminar</a>, University of Tartu, Estonia, November 18, 2021 (invited) [<a href="https://youtu.be/WwnRMLxG0gs">video</a>]
+</p>
 
 <p>
 [187] SMAP Colloquium, University of Portsmouth, November 10, 2021 (invited)
