--- a/i_team.html
+++ b/i_team.html
@@ -59,7 +59,7 @@
 
           <h2>Postdocs </h2>
           <ul>
-            <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (10/2021-present)</li>
+            <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (10/2021-12/2021)</li>
             <li><a href="https://k3nfalt.github.io">Alexander Tyurin</a> (7/2021-present)</li>
             <li><a href="https://fhanzely.github.io">Filip Hanzely</a> (8/2020-11/2020)</li>
             <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)</li>
@@ -74,7 +74,7 @@
           <ul>
             <li><a href="https://lukangsun.github.io">Lukang Sun</a> (3/2021-present)</li>
             <li><a href="https://slavomir-hanzely.github.io">Slavomír Hanzely</a> (1/2021-present)</li>
-            <li><a href="https://cemse.kaust.edu.sa/news/meet-kaust-student-konstantin-burlachenko?fbclid=IwAR2KCPy-X1C4Ls8u9rhlkNwqdRqONaKPqHdXzmBq_lSNDpOjGxVBM-o0DZE">Konstantin Burlachenko</a> (08/2020-present)</li>
+            <li><a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> (08/2020-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
             <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (1/2020-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
