--- a/i_papers.html
+++ b/i_papers.html
@@ -54,6 +54,7 @@
 
           [177] Elnur Gasanov, Ahmed Khaled, Samuel Horváth and Peter Richtárik<br>
           <b>FLIX: A simple and communication-efficient alternative to local methods in federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2111.11556">arXiv</a>] [code: FLIX] <br>
           <br>
 
