--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,13 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [178] Konstantin Burlachenko, Samuel Horváth and Peter Richtárik<br>
+          <b>FL_PyTorch: optimization research simulator for federated learning</b><br>
+          <a href="https://dl.acm.org/doi/pdf/10.1145/3488659.3493775">Proceedings of the 2nd ACM International Workshop on Distributed Machine Learning</a> <br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2111.11556">arXiv</a>] [code: FLIX] <br>
+          <br>
+
           [177] Elnur Gasanov, Ahmed Khaled, Samuel Horváth and Peter Richtárik<br>
           <b>FLIX: A simple and communication-efficient alternative to local methods in federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
