--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 
-<h3>November 7, 2021</h3>
+<h3>December 7, 2021</h3>
 <h1>New Paper</h1>
 <br>
 
@@ -76,8 +76,13 @@ The paper is published in the <a href="https://dl.acm.org/doi/pdf/10.1145/348865
 <h1>Oral Talk at NeurIPS 2021</h1>
 <br>
 
-Today I gave an oral talk at NeurIPS on the <a href="https://arxiv.org/abs/2106.05203">EF21 paper.</a>  A longer version of the talk is on <a href="https://www.youtube.com/watch?v=rjWze5rcSUM&feature=emb_logo">YouTube.</a>
+Today I gave an oral talk at NeurIPS about the <a href="https://arxiv.org/abs/2106.05203">EF21 method.</a>  Come to our poster on Thursday! A longer version of the talk is on <a href="https://www.youtube.com/watch?v=rjWze5rcSUM&feature=emb_logo">YouTube.</a>
 <br>
+
+<br>
+<img alt="" src="imgs/EF21-neurips.png" width="600">
+<br>
+
 
 <br>
 <br>
