cleaning talks; adding Kostya's PhD thesis

--- a/i_talks.html
+++ b/i_talks.html
@@ -46,38 +46,16 @@
         <div id="content">
 
 
-<h1> Postponed Talks</h1>
-
+<h1> Future Talks</h1>
 
 <p>
 <a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast Optimization Algorithms in the Big Data Era</a>, Institute
-of Mathematical Sciences, National University of Singapore, Singapore, August 3-7, 2020 (invited) <span class="important">postponed until August 2022 due to Covid-19</span>
-</p>
-
-
-
-
-<p>
-Mathematics Research Seminar, Seoul National University, Seoul, South Korea, June 2020 (invited) <span class="important">postponed due to Covid-19</span>
+of Mathematical Sciences, National University of Singapore, Singapore, August 1-26, 2022 (invited)
 </p>
 
 <p>
-AI: Collaborate and Accelerate, College of Computer Sciences and Information Technology (CCSIT), King Faisal University, Al-Ahsa, Saudi Arabia, April 8, 2020 (keynote speaker) <span class="important">cancelled due to Covid-19</span>
+PhD Course (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria (invited)
 </p>
-
-<p>
-Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="important">postponed due to Covid-19</span>
-</p>
-
-<p>
-<a href="https://www.google.com/search?client=safari&amp;rls=en&amp;q=IFORS+2020&amp;ie=UTF-8&amp;oe=UTF-8">IFORS 2020</a>, Coex, Seoul, Korea, June 21-26, 2020 (invited
-session organizer) <span class="important">postponed due to Covid-19</span>
-</p>
-
-
-
-
-<h1> Future Talks</h1>
 
 <p>
 <a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 13-16, 2022 (invited)
@@ -85,10 +63,6 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 
 <p>
 Dagstuhl Seminar, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
-</p>
-
-<p>
-PhD Course (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria (invited)
 </p>
 
 <p>
@@ -100,7 +74,7 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership"</a>, virtual,
 <h1>2021 Talks</h1>
 
 <p>
-<a href="https://nips.cc/virtual/2021/calendar">NeurIPS 2021 Oral Talk</a> on the <a href="https://arxiv.org/abs/2106.05203">EF21 paper</a>, virtual, December 7, 2021 (oral talk; less than 1% acceptance rate)
+[190] <a href="https://nips.cc/virtual/2021/calendar">NeurIPS 2021 Oral Talk</a> on the <a href="https://arxiv.org/abs/2106.05203">EF21 paper</a>, virtual, December 7, 2021 (oral talk; less than 1% acceptance rate)
 </p>
 
 <p>
