--- a/i_team.html
+++ b/i_team.html
@@ -79,7 +79,10 @@
             <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (1/2020-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
             <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a>  (1/2019-present)</li>
-            <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-10/2021)</li>
+            <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-10/2021) <br>
+              thesis: <a href="https://arxiv.org/abs/2110.12281">On Seven Fundamental Optimization Challenges in Machine Learning</a> <br>
+              current position: Postdoctoral Fellow, CNRS / École Normale Supérieure / Inria, Paris, France
+            </li>
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-7/2020) <br>
               thesis: <a href="https://arxiv.org/abs/2008.11824">Optimization for Supervised Machine Learning: Randomized Algorithms for Data and Parameters</a> <br>
               current position: Research Assistant Professor, TTIC, Chicago, USA
