--- a/i_papers.html
+++ b/i_papers.html
@@ -84,7 +84,7 @@
           [173] Ilyas Fatkhullin, Igor Sokolov, Eduard Gorbunov, Zhize Li and Peter Richtárik<br>
           <b>EF21 with bells & whistles: practical algorithmic extensions of modern error feedback </b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2110.03294">arXiv</a>] [code: EF21-SGD, EF21-PAGE, EF21-PP, EF21-BC, EF21-HB, EF21-Prox] <br>
+          [<a href="https://arxiv.org/abs/2110.03294">arXiv</a>] [code: EF21-SGD, EF21-PAGE, EF21-PP, EF21-BC, EF21-HB, EF21-Prox] [<a href="https://github.com/IgorSokoloff/ef21_experiments_source_code">github</a>] <br>
           <br>
 
           [172] Xun Qian, Hanze Dong, Peter Richtárik and Tong Zhang<br>
@@ -121,7 +121,7 @@
           <b>EF21: A new, simpler, theoretically better, and practically faster error feedback</b><br>
           Advances in Neural Information Processing Systems 34 (NeurIPS 2021) <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [<a href="talks/TALK-2021-EF21-FL-ICML21.pdf">slides</a>] [code: EF21, EF21+]<br>
+          [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [<a href="talks/TALK-2021-EF21-FL-ICML21.pdf">slides</a>] [code: EF21, EF21+] [<a href="https://github.com/IgorSokoloff/ef21_experiments_source_code">github</a>]<br>
           <br>
 
           [166] Dmitry Kovalev, Elnur Gasanov, Peter Richtárik and Alexander Gasnikov<br>
