--- a/i_join.html
+++ b/i_join.html
@@ -123,8 +123,9 @@
           you start in August in year Y, you will get your MS degree in
           December in year Y+1, and will continue as a PhD student from
           January of year Y+2. If you have an MS degree already, apply
-          directly to the PhD program. If you are from Europe, I recommend that you also apply
-          for the <a href="https://cemse.kaust.edu.sa/alkhwarizmi">European Science Foundation Al Khwarizmi Doctoral Fellowship</a> - this is more prestigious than the standard KAUST Fellowship.
+          directly to the PhD program. If you are from Europe or North America, I recommend that you also apply
+          for the <a href="https://admissions.kaust.edu.sa/Discovery_Fellowship.html">European Science Foundation KAUST Discovery Fellowship</a> -
+          this is more prestigious than the standard KAUST Fellowship.
           PhD at KAUST takes a minimum of
           2.5 years. We accept students for entry in Fall (August) and
           Spring (January). However, most students start in the Fall.
