--- a/i_talks.html
+++ b/i_talks.html
@@ -62,6 +62,10 @@ PhD Course (18 hrs), Vienna Graduate School for Computational Optimization (VGSC
 </p>
 
 <p>
+Apple's Workshop on Privacy Preserving Machine Learning, April 5-6, 2022 (invited)
+</p>
+
+<p>
 Dagstuhl Seminar, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
 </p>
 
