--- a/i_talks.html
+++ b/i_talks.html
@@ -49,6 +49,10 @@
 <h1> Future Talks</h1>
 
 <p>
+7th International School on Deep Learning (DeepLearn 2022 Autumn), Luleå, Sweden, October 17-21, 2022 (invited 4.5h mini-course on Federated Learning)
+</p>
+
+<p>
 <a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast Optimization Algorithms in the Big Data Era</a>, Institute
 of Mathematical Sciences, National University of Singapore, Singapore, August 1-26, 2022 (invited)
 </p>
@@ -75,7 +79,7 @@ Dagstuhl Seminar, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?se
 <h1>2021 Talks</h1>
 
 <p>
-<a href="https://neurips2021workshopfl.github.io/NFFL-2021/">NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
+[191] <a href="https://neurips2021workshopfl.github.io/NFFL-2021/">NeurIPS 2021 Workshop: "New Frontiers in Federated Learning:
 Privacy, Fairness, Robustness, Personalization and Data Ownership"</a>, virtual, December 13, 2021 (plenary)
 </p>
 
@@ -592,112 +596,13 @@ Large-scale Data</a>, Oberwolfach, Germany, March 6-12, 2016
 
 
               Conference </a><a
-              href="http://euler.doa.fmph.uniba.sk/TrojKralKonf.html">(trojkralova
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              konferencia)</a>, Bratislava, Slovakia, January 4, 2016</p>
+              href="http://euler.doa.fmph.uniba.sk/TrojKralKonf.html">(trojkralova konferencia)</a>, Bratislava, Slovakia, January 4, 2016</p>
 
 
 
           <h1>2015 Talks</h1>
           <p> [101] <a
-              href="http://icms.org.uk/workshops/largescaleinverseproblems">Theoretical
-and
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Computational Approaches to Large Scale Inverse Problems</a>
+              href="http://icms.org.uk/workshops/largescaleinverseproblems">Theoretical and Computational Approaches to Large Scale Inverse Problems</a>
             (Alan Turing Institute Workshop), ICMS, Edinburgh, UK,
             December 2-4, 2015 (organizer)</p>
 
