--- a/i_team.html
+++ b/i_team.html
@@ -73,20 +73,33 @@
           <h2>PhD Students </h2>
           <ul>
             <li><a href="https://lukangsun.github.io">Lukang Sun</a> (3/2021-present)</li>
+
             <li><a href="https://slavomir-hanzely.github.io">Slavomír Hanzely</a> (1/2021-present)</li>
+
+            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (9/2020-12/2021) - <a href="https://mipt.ru/english/">MIPT</a> <br>
+              thesis: <a href="https://128.84.4.18/abs/2112.10645">Distributed and Stochastic Optimization Methods with Gradient Compression and Local Steps</a> <br>
+            </li>
+
             <li><a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> (08/2020-present)</li>
+
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
+
             <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (1/2020-present)</li>
+
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
+
             <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a>  (1/2019-present)</li>
+
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-10/2021) <br>
               thesis: <a href="https://arxiv.org/abs/2110.12281">On Seven Fundamental Optimization Challenges in Machine Learning</a> <br>
               current position: Postdoctoral Fellow, CNRS / École Normale Supérieure / Inria, Paris, France
             </li>
+
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-7/2020) <br>
               thesis: <a href="https://arxiv.org/abs/2008.11824">Optimization for Supervised Machine Learning: Randomized Algorithms for Data and Parameters</a> <br>
               current position: Research Assistant Professor, TTIC, Chicago, USA
             </li>
+
           </ul>
 
           <h2>MS Students </h2>
