--- a/i_team.html
+++ b/i_team.html
@@ -72,6 +72,10 @@
 
           <h2>PhD Students </h2>
           <ul>
+            <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (1/2022-present)</li>
+
+            <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (9/2021-present)</li>
+
             <li><a href="https://lukangsun.github.io">Lukang Sun</a> (3/2021-present)</li>
 
             <li><a href="https://slavomir-hanzely.github.io">Slavomír Hanzely</a> (1/2021-present)</li>
@@ -106,8 +110,8 @@
           <ul>
 
             <li><a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a> (8/2020-present)</li>
-            <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (8/2020-present)</li>
-            <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-present)</li>
+            <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (8/2020-12/2021)</li>
+            <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-8/2021)</li>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-12/2020)</li>
             <li><a href="https://slavomir-hanzely.github.io">Slavomír Hanzely</a> (8/2019-12/2020)</li>
             <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (9/2018-12/2019)</li>
