--- a/i_team.html
+++ b/i_team.html
@@ -125,7 +125,7 @@
           <ul>
             <li><a href="https://scholar.google.com/citations?user=BFCHfngAAAAJ&hl=en">Navish Kumar</a> (IIT Kharagpur), 11/2021-5/2022 </li>
             <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> (Warwick), 7/2021-10/2021 </li>
-            <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 7/2021-present </li>
+            <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 7/2021-11/2021 </li>
             <li> <a href="https://scholar.google.com/citations?hl=en&user=H9GqvAYAAAAJ&view_op=list_works&sortby=pubdate">Bokun Wang</a> (University of California, Davis), 5/2020-8/2021</li>
             <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Technical University Munich), 3/2021-present </li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 3/2021-8/2021</li>
